--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "chinese-card-games",
     "version": "0.0.1",
+    "main": "server.js",
     "description": "website with multiple different chinese card games",
     "dependencies": {
         "express": "^4.18.2",
