--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "description": "website with multiple different chinese card games",
     "dependencies": {
         "express": "^4.18.2",
+        "node-localstorage": "^2.2.1",
         "react": "^18.2.0",
         "socket.io": "^4.7.1"
     }
